--- a/references.bib
+++ b/references.bib
@@ -2397,6 +2397,28 @@
     volume = {5}
 }
 
+@article{Vaswani2017AttentionNeed,
+    title = {{Attention is all you need}},
+    year = {2017},
+    journal = {Advances in Neural Information Processing Systems},
+    author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Łukasz and Polosukhin, Illia},
+    number = {Nips},
+    pages = {5999--6009},
+    volume = {2017-Decem},
+    issn = {10495258},
+    arxivId = {1706.03762}
+}
+
+@article{Kingma2022Auto-EncodingBayes,
+    title = {{Auto-Encoding Variational Bayes}},
+    year = {2022},
+    journal = {arXiv},
+    author = {Kingma, Diederik P and Welling, Max},
+    number = {Ml},
+    pages = {1--14},
+    arxivId = {arXiv:1312.6114v11}
+}
+
 @misc{Albrecht2019BrainInvestigation,
     title = {{Brain glial activation in fibromyalgia – A multi-site positron emission tomography investigation}},
     year = {2019},
@@ -2923,6 +2945,22 @@
     keywords = {Comorbidity, Cortical spreading depolarization, Inflammasome, Migraine, Mitochondrial DNA, Neuroinflammation}
 }
 
+@article{Mertens2021MinimallyFunction,
+    title = {{Minimally invasive quantification of cerebral P2X7R occupancy using dynamic [18F]JNJ-64413739 PET and MRA-driven image derived input function}},
+    year = {2021},
+    journal = {Scientific Reports},
+    author = {Mertens, Nathalie and Schmidt, Mark E. and Hijzen, Anja and Van Weehaeghe, Donatienne and Ravenstijn, Paulien and Depre, Marleen and de Hoon, Jan and Van Laere, Koen and Koole, Michel},
+    number = {1},
+    pages = {1--11},
+    volume = {11},
+    publisher = {Nature Publishing Group UK},
+    url = {https://doi.org/10.1038/s41598-021-95715-y},
+    isbn = {0123456789},
+    doi = {10.1038/s41598-021-95715-y},
+    issn = {20452322},
+    pmid = {34373571}
+}
+
 @article{Rezaei2014ML-reconstructionFactors,
     title = {{ML-reconstruction for TOF-PET with simultaneous estimation of the attenuation factors}},
     year = {2014},
@@ -3085,6 +3123,19 @@
     issn = {01615505},
     pmid = {24665088},
     keywords = {Chronic fatigue syndrome (CFS), Myalgic encephalomyelitis (ME), Neuroinflammation, Positron emission tomography (PET)}
+}
+
+@article{Sari2018Non-invasive11C-SB201745,
+    title = {{Non-invasive kinetic modelling of PET tracers with radiometabolites using a constrained simultaneous estimation method: evaluation with 11C-SB201745}},
+    year = {2018},
+    journal = {EJNMMI Research},
+    author = {Sari, Hasan and Erlandsson, Kjell and Marner, Lisbeth and Law, Ian and Larsson, Henrik B.W. and Thielemans, Kris and Ourselin, Sébastien and Arridge, Simon and Atkinson, David and Hutton, Brian F.},
+    volume = {8},
+    publisher = {EJNMMI Research},
+    isbn = {1355001804126},
+    doi = {10.1186/s13550-018-0412-6},
+    issn = {2191219X},
+    keywords = {Arterial input function, Kinetic modelling, PET/MR, Positron emission tomography}
 }
 
 @article{Glass2021NotHaze,
@@ -3496,6 +3547,19 @@
     publisher = {BMC Medicine},
     doi = {10.1101/2020.08.11.20172643},
     keywords = {Non-pharmaceutical interventions,Policy evaluation, covid-19, health impact assessment, longitudinal analysis, non-pharmaceutical interventions, pandemic, policy evaluation, public health intervention, quantitative, sars-cov-2}
+}
+
+@article{Rabiner2015TheDesign,
+    title = {{The impact of the rs6971 polymorphism in TSPO for quantification and study design}},
+    year = {2015},
+    journal = {Clinical and Translational Imaging},
+    author = {Rabiner, D R Owen Q Guo E A and Gunn, R N},
+    number = {6},
+    pages = {417--422},
+    volume = {3},
+    publisher = {Springer Milan},
+    doi = {10.1007/s40336-015-0141-z},
+    issn = {2281-7565}
 }
 
 @article{OwenDRGuoQRabinerEA2015TheDesign,
