Updates from Overleaf

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,11 +1,7 @@
 \vspace{-0.6cm}
 
-\section{Introduction} \label{sec:introduction}\vspace{-0.1cm}
-    \IEEEPARstart{T}{he} \gls{VT} estimated with an \gls{AIF} is the gold standard for \gls{PET} quantification of \gls{PBR28} binding. This quantification, however, requires the concurrent measurement of the concentrations of unchanged radioligand in arterial plasma. Although insertion of an arterial catheter rarely results in clinically relevant adverse events, it is an invasive and laborous procedure. 
-    \gls{IDIF} represents a promising alternative to arterial sampling ~\cite{Zanotti-Fregonara2011}. However, its applicability in clinical research is hampered by several reasons including the    inaccuracy in the estimation of  both shape and amplitude of the \gls{IF}; moreover \gls{IDIF} does not allow for  radio-metabolites quantification~\cite{Sari2018Non-invasive11C-SB201745}. 
-    
-    Recently, the possibility to utilise \gls{ML} to predict the \gls{AIF} from \gls{PET} images has been explored~\cite{Kuttner2020, Ferrante2022PhysicallyImaging}. While those methods have shown promising results, the vast majority of those approaches have been developed for \gls{PET} tracers that do not have radio-metabolites. Moreover, existing literature relies on less sophisticated \gls{NN}-based approaches where the uncertainty of the prediction is not taken into account.
-    
-    Here, we propose a bayesian \gls{NN}-based method for predicting a metabolite corrected \gls{AIF}, while allowing for the estimation of uncertainty of the model's output.%Specifically for the \gls{AE}, although also present in the other networks, we try to enforce the low dimensional representation of the input data as disentangled and continuous. Furthermore, the network does not predict a single signal for each input; rather, it predicts a probability density function of potential signals, which allows for the estimation of uncertainty of the model's output.
+\section{Introduction} \label{sec:introduction}\vspace{-0.3cm}\vspace{0.2cm}
+    \IEEEPARstart{T}{he} \gls{VT} estimated with an \gls{AIF} is utilised for  quantification of many \gls{PET} tracers including \gls{PBR28}. This, however, requires the concurrent measurement of the concentrations of unchanged radioligand in arterial plasma. Although insertion of an arterial catheter rarely results in clinically relevant adverse events, it is an invasive and laborious procedure. 
+    \gls{IDIF} represents a promising alternative to arterial sampling~\cite{Zanotti-Fregonara2011}. However, its applicability in clinical research is hampered by several reasons including the inaccuracy in the estimation of both shape and amplitude of the \gls{IF}; moreover \gls{IDIF} does not allow for radio-metabolites quantification~\cite{Sari2018Non-invasive11C-SB201745}. The application of \gls{ML} is expected to improve the accuracy of predicting the \gls{AIF} from \gls{PET} images~\cite{Kuttner2020, Ferrante2022PhysicallyImaging}. While those methods have shown promising results, the vast majority of those approaches have been developed for \gls{PET} tracers that do not have radio-metabolites. Moreover, even if the developed model shows sufficient prediction accuracy for unseen data, it remains challenging to trust  in clinical settings. Here, we propose a bayesian \gls{NN}-based method for predicting a metabolite corrected \gls{AIF}, while allowing for the estimation of uncertainty of the model's output.%Specifically for the \gls{AE}, although also present in the other networks, we try to enforce the low dimensional representation of the input data as disentangled and continuous. Furthermore, the network does not predict a single signal for each input; rather, it predicts a probability density function of potential signals, which allows for the estimation of uncertainty of the model's output.
     
     % it can be applied retrospectively, it isn't prone to user error, it can be used to save scans where the blood has failed, sites require blood sampling facilities and staff
