--- a/references.bib
+++ b/references.bib
@@ -2374,6 +2374,38 @@
     volume = {55}
 }
 
+@article{Morrissey2023AssessingTrial,
+    title = {{Assessing the potential anti-neuroinflammatory effect of minocycline in chronic low back pain: Protocol for a randomized, double-blind, placebo-controlled trial}},
+    year = {2023},
+    journal = {Contemporary Clinical Trials},
+    author = {Morrissey, Erin J. and Alshelh, Zeynab and Knight, Paulina C. and Saha, Atreyi and Kim, Minhae and Torrado-Carvajal, Angel and Zhang, Yi and Edwards, Robert R. and Pike, Chelsea and Locascio, Joseph J. and Napadow, Vitaly and Loggia, Marco L.},
+    number = {August 2022},
+    pages = {107087},
+    volume = {126},
+    publisher = {Elsevier Inc.},
+    url = {https://doi.org/10.1016/j.cct.2023.107087},
+    doi = {10.1016/j.cct.2023.107087},
+    issn = {15592030},
+    pmid = {36657520},
+    keywords = {18 kDa translocator protein (TSPO), Chronic pain, Low back pain, Minocycline, Neuroinflammation, Positron emission tomography}
+}
+
+@article{Morrissey2023AssessingTrialb,
+    title = {{Assessing the potential anti-neuroinflammatory effect of minocycline in chronic low back pain: Protocol for a randomized, double-blind, placebo-controlled trial}},
+    year = {2023},
+    journal = {Contemporary Clinical Trials},
+    author = {Morrissey, Erin J. and Alshelh, Zeynab and Knight, Paulina C. and Saha, Atreyi and Kim, Minhae and Torrado-Carvajal, Angel and Zhang, Yi and Edwards, Robert R. and Pike, Chelsea and Locascio, Joseph J. and Napadow, Vitaly and Loggia, Marco L.},
+    number = {December 2022},
+    pages = {107087},
+    volume = {126},
+    publisher = {Elsevier Inc.},
+    url = {https://doi.org/10.1016/j.cct.2023.107087},
+    doi = {10.1016/j.cct.2023.107087},
+    issn = {15592030},
+    pmid = {36657520},
+    keywords = {18 kDa translocator protein (TSPO), Chronic pain, Low back pain, Minocycline, Neuroinflammation, Positron emission tomography}
+}
+
 @misc{Ruiz2017AssociationPatients,
     title = {{Association of periodic and rhythmic electroencephalographic patterns with seizures in critically ill patients}},
     year = {2017},
@@ -3132,7 +3164,6 @@
     author = {Sari, Hasan and Erlandsson, Kjell and Marner, Lisbeth and Law, Ian and Larsson, Henrik B.W. and Thielemans, Kris and Ourselin, Sébastien and Arridge, Simon and Atkinson, David and Hutton, Brian F.},
     volume = {8},
     publisher = {EJNMMI Research},
-    isbn = {1355001804126},
     doi = {10.1186/s13550-018-0412-6},
     issn = {2191219X},
     keywords = {Arterial input function, Kinetic modelling, PET/MR, Positron emission tomography}
@@ -3397,6 +3428,20 @@
     issn = {16640640},
     pmid = {33692712},
     keywords = {immune, infection, sex differences, social behavior, social stress and social support}
+}
+
+@article{Turkheimer2022SicknessInteractions,
+    title = {{Sickness Behaviour and Depression: An Updated Model of Peripheral-Central Immunity Interactions}},
+    year = {2022},
+    journal = {Brain Behavior and Immunity},
+    author = {Turkheimer, Federico E. and Veronese, Mattia and Mondelli, Valeria and Cash, Diana and Pariante, Carmine M.},
+    number = {March},
+    publisher = {The Author(s)},
+    url = {https://doi.org/10.1016/j.bbi.2023.03.031},
+    isbn = {8862277121},
+    doi = {10.1016/j.bbi.2023.03.031},
+    issn = {0889-1591},
+    keywords = {art, covid-19, design, hybrid education, online education, technology-enhanced}
 }
 
 @misc{Single-nucleusReader.pdf,
