--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,18 @@
 \usepackage[style=ieee, doi=false, isbn=false, url=false, maxbibnames=1, minbibnames=1, maxcitenames=1, mincitenames=1, backend=biber, defernumbers=false]{biblatex}
 \addbibresource{./references.bib}
 
+\AtEveryBibitem{\clearfield{month}}
+\AtEveryBibitem{\clearfield{day}}
+\AtEveryBibitem{\clearfield{volume}}
+\AtEveryBibitem{\clearfield{issue}}
+\AtEveryBibitem{\clearfield{pages}}
+\AtEveryBibitem{\clearfield{number}}
+\AtEveryBibitem{\clearfield{title}}
+\AtEveryBibitem{\clearfield{isbn}}
+\AtEveryBibitem{\clearfield{keywords}}
+\AtEveryBibitem{\clearfield{issn}}
+\AtEveryBibitem{\clearfield{journal}}
+
 \usepackage[activate={true, nocompatibility}, final, tracking=true, kerning=true, spacing=true, factor=1100, stretch=10, shrink=10]{microtype}
 \linespread{0.95}
 
@@ -36,7 +48,7 @@
 \newacronym{AIF}{AIF}{Arterial Input Function}
 \newacronym{AUC}{AUC}{Area Under the Curve}
 \newacronym{cLBP}{cLBP}{chronic Low Back Pain}
-\newacronym{CV}{CV}{Cofficient of Variation}
+\newacronym{CV}{nCV}{Normalised Coefficient of Variance}
 \newacronym{MSE}{MSE}{Mean Squared Error}
 \newacronym{MR}{MR}{Magnetic Resonance}
 \newacronym{PBR28}{[$^{11}$C]-PBR$28$}{[$^{11}$C]-Peripheral Benzodiazepine Receptor}
@@ -77,38 +89,43 @@
 \title{
     \vspace{-0.75cm}
     
-    A Bayesian Neural Network-Based Method For The Extraction Of A Metabolite Corrected Arterial Input Function From Dynamic [$^{11}$C]PBR28 PET 
+    A Bayesian Neural Network-Based Method for the Extraction of a Metabolite Corrected Arterial Input Function from Dynamic [$^{11}$C]PBR28 PET 
 }
 
 \author{
     \vspace{-0.25cm}
     
-    Alexander C. Whitehead$^{*}$,
-    Ludovica Brusaferri$^{*}$,
-    Lucia Maccioni,
-    Matteo Ferrante,
-    Marianna Inglese,
-    Zeynab Alshelh,
-    Mattia Veronese,
-    Nicola Toschi,
-    Jodi Gilman,
-    Kris Thielemans, and
-    Marco L. Loggia
+    Alexander~C.~Whitehead$^{*}$~\IEEEmembership{Student~Member,~IEEE},
+    Ludovica~Brusaferri$^{*}$,
+    Lucia~Maccioni,
+    Matteo~Ferrante,
+    Marianna~Inglese,
+    Zeynab~Alshelh,
+    Mattia~Veronese,
+    Nicola~Toschi,
+    Jodi~Gilman,
+    Kris~Thielemans,
+    and~Marco~L.~Loggia
 
     \vspace{-0.75cm}
-    
-    \thanks{This work was funded by the NIH grants R01-NS094306-01A1, R01-NS095937-01A1 and R01-DA047088-01, GE Healthcare, the NIHR UCLH Biomedical Research Centre and the UCL EPSRC Centre for Doctoral Training in Intelligent, Integrated Imaging in Healthcare (i4health) grant (EP/L016478/1) and by the Open Source Imaging Consortium (OSIC).}
-    \thanks{Alexander~C.~Whitehead was with the Institute of Nuclear Medicine, University College London, London, UK and the Centre for Medical Image Computing, University College London, London, UK. He is now with the Department of Computer Science, University College London, London, UK.} 
-    \thanks{Ludovica~Brusaferri, is with Athinoula A. Martinos Center for Biomedical Imaging, Harvard Medical School, Boston, MA, US.}
+
+    \thanks{This work was funded by GE Healthcare, the NIHR UCLH Biomedical Research Centre, the UCL EPSRC Centre for Doctoral Training in Intelligent, Integrated Imaging in Healthcare (i4health) grant (EP/L016478/1), the Open Source Imaging Consortium (OSIC), the NIH grants R01-NS094306-01A1, R01-NS095937-01A1 and R01-DA047088-01, the Italian Ministry of University and Research (MUR), National Recovery and Resilience Plan(NRRP), project MNESYS (PE0000006)(to NT) – A Multiscale integrated approach to the study of the nervous system in health and disease (DN. 1553 11.10.2022), National Center for HPC, BIG DATA AND QUANTUM COMPUTING (Project no. CN00000013 CN1), the PNRR National Grant DIGITAL LIFELONG PREVENTION (Project no PNC0000002DARE), and by Wellcome Trust Digital Award (no. 215747/Z/19/Z).}
+    \thanks{Alexander~C.~Whitehead is with the Department of Computer Science, University College London, London, UK. Ludovica~Brusaferri, Zeynab~Alshelh, Jodi~Gilman, Nicola~Toschi, and Marco~L.~Loggia are with Athinoula A. Martinos Center for Biomedical Imaging, Harvard Medical School, Boston, MA, US. Lucia~Maccioni and Mattia~Veronese are with the Department of Information Engineering, University of Padua, Padua, Italy and Neuroimaging Department, IoPPN, King’s College London, London, UK. Matteo~Ferrante, Marianna~Inglese, and Nicola~Toschi are with the Department of Biomedicine and Prevention, University of Rome Tor Vergata, Rome, Italy.}
 }
 
 \pagestyle{plain}
 \pagenumbering{gobble}
 
 \maketitle
+% the gold standard for quantification of many PET radiotracers is via kinetic modeling, often requiring radiometabolite-corrected AIF. AIf if invasive... Here we propose to get to Vt via DL. Because XXX (estimating Vt direclty poses XXX problems/complexities), we propose 3 DL-based strategies that estimates AIF, which can then be used for kinetic modeling
+
+% The invasiveness and technical demands of arterial sampling and metabolite correction, which are prerequisites for the measurement of receptor binding for many radioligands through kinetic modeling, limit the application of full quantification in both research and clinical PET studies. Here we propose the use of deep learning-based methods to estimate the AIF, 1) directly from the entire dynamic PET images (NN-AEIF), or 2) from the image-derived input function (IDIF) (NN-IDIF). We also test the same methods to metabolite-correct the un-corrected plasma curve (NN-AIF) (WHY DO WE NEED THIS???). All the NN-based methods output a measure for prediction uncertainty. The three methods (together with IDIF) were compared to the metabolite-corrected AIF in terms of VT, while the uncertainty of each NN-based method was assessed in terms of CV. Overall, both NN-AEIF and NN-AIF were able to accurately predict VTs, outperforming the other methods, with NN-AEIF showing the lowest CV.
 
 \begin{abstract}
-    Arterial blood sampling is the gold standard for input function measurements in PET imaging, especially for such tracers as [$^{11}$C]PBR28 that produce radio-metabolites. As arterial sampling is an invasive procedure, its application is limited in routine clinical practice. Here we propose a deep learning-based method to directly estimate the input function from dynamic PET images (NN-AEIF), as well as to metabolite-correct the IDIF (NN-IDIF) and the un-corrected  plasma curve (NN-AIF). All the NN-based methods output a measure for prediction uncertainty. The three methods (together with IDIF) were compared to the metabolite-corrected AIF in terms of V{$_\mathrm{T}$}, while the uncertainty of each NN-based method was assessed in terms of CV. Overall, both NN-AEIF and NN-AIF were able to accurately predict V{$_\mathrm{T}$}s, outperforming the other methods, with NN-AEIF showing the lowest  CV.
+    The invasiveness and technical demands of arterial sampling and metabolite correction, which are prerequisites for the measurement of $\mathrm{V_T}$s for many radioligands, limit the application of full quantification in both research and clinical PET studies. 
+    Machine learning approaches have been explored to predict $\mathrm{V_T}$s from PET images, but their integration in clinical routine is limited by the lack of transparent and reproducible outcomes. Here we propose a Bayesian Neural Network to estimate the AIF (which can then be used for kinetic modelling) while also outputting its prediction uncertainty, 1) directly from the entire dynamic PET images (NN-AEIF), 2) from the image-derived input function (IDIF) (NN-IDIF) and, as sensitivity measure, 3) from the un-corrected plasma curve (NN-AIF). All methods were compared to the metabolite-corrected AIF in terms of $\mathrm{V_T}$, and the prediction uncertainty was assessed in terms of normalised coefficient of variance (nCV). Overall, both NN-AEIF and NN-AIF were able to accurately predict $\mathrm{V_T}$s, outperforming the other methods, with NN-AEIF showing the lowest nCV.
+
+    % The Volume of distribution ($ \mathrm{V_T}$) estimated with an arterial input function (AIF) is the gold standard for quantitation of many PET radiotracers, often requiring radiometabolite-correction. However, arterial sampling is a laborious and invasive procedure. Machine learning approaches have been explored to directly predict $ \mathrm{V_T}$s from PET images, but they are not sufficiently transparent to trust in clinical practice.  Here we propose to estimate the input function from dynamic PET images (NN-AEIF), as well as to metabolite-correct the IDIF (NN-IDIF) and the un-corrected  plasma curve (NN-AIF). Moreover, all the NN-based methods output a measure for prediction uncertainty that can be used in subsequent quality-control stages. The three methods (together with IDIF) were compared to the metabolite-corrected AIF in terms of V{$_\mathrm{T}$}, while the uncertainty of each NN-based method was assessed in terms of normalised (nCV). Overall, both NN-AEIF and NN-AIF were able to accurately predict V{$_\mathrm{T}$}s, outperforming the other methods, with NN-AEIF showing the lowest nCV.
 \end{abstract}
 
 % \begin{IEEEkeywords}
